[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "long-term-data-analysis"
version = "0.1.0"
description = "Analyzes data from weather stations over long time periods"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">= 3.9"
authors = [
    {name = "Michael Moench", email = "almo1024@colorado.edu"},
]
dependencies = [
    "numpy >= 1.22",
    "matplotlib >= 3.5",
]

[project.optional-dependencies]
dev = ["build", "twine"]

[project.scripts]
data_analysis_package = "data_analysis_package.run_analysis:main"